--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -56,3 +56,9 @@ de:
     progress-dynamics: "Das Speditionsunternehmen"
     individual-aproach: "Kundenorientierter Service"
 
+
+  articles:
+    title: Jüngsten Ankündigungen
+  contact:
+    feedback_form:
+      title: "Залишіть відгук:"
