--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -61,4 +61,4 @@ de:
     title: Jüngsten Ankündigungen
   contact:
     feedback_form:
-      title: "Залишіть відгук:"
+      title: "Hinterlasse einen Kommentar:"
