--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -40,4 +40,6 @@ uk:
 
   contact:
     feedback_form:
-      title: "Залишіть відгук:"
+      title: "Залиште відгук:"
+  # basic
+  submit-button: "Надіслати"
